--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vòng quay may mắn</title>
+    <link rel="stylesheet" href="./assets/style.css" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
       integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
@@ -16,17 +17,30 @@
     <header>
       <div class="header-container">
         <div class="header-logo">
-          <img src="" alt="" class="header-img" />
+          <img src="./assets/logo-mdsco-blue.png" alt="" class="header-img" />
         </div>
-        <div class="header-content"></div>
+        <div class="header-content">
+          <h1>VÒNG QUAY MAY MẮN</h1>
+        </div>
       </div>
     </header>
     <div class="container">
       <div class="wrapper">
-        <div class="container-left" id="wheel">
-          <canvas id="canvas" width="1000" height="600"></canvas>
+        <div class="container-left">
+          <label class="content-label" style="display: block"
+            >Chưa có người tham gia</label
+          >
+          <div id="wheel" class="content-wheel" style="display: none">
+            <canvas
+              id="canvas"
+              width="1000"
+              height="600"
+              class="content-canvas"
+            ></canvas>
+          </div>
         </div>
         <div class="container-right">
+          <label for="name"></label>
           <textarea name="" id="name" cols="30" rows="10"></textarea>
         </div>
       </div>
