--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vòng quay may mắn</title>
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
       integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
@@ -33,19 +33,32 @@
           <div id="wheel" class="content-wheel" style="display: none">
             <canvas
               id="canvas"
-              width="1000"
-              height="600"
+              width="750"
+              height="750"
               class="content-canvas"
             ></canvas>
           </div>
         </div>
         <div class="container-right">
-          <label for="name"></label>
-          <textarea name="" id="name" cols="30" rows="10"></textarea>
+          <div class="container-right--top">
+            <label class="container-use--label">Hướng dẫn chơi</label>
+            <ul class="container-use">
+              <li>Nhập tên các người chơi</li>
+              <li>Nhấn vào vòng quay để bắt đầu trò chơi</li>
+            </ul>
+          </div>
+          <div class="container-right--bottom">
+            <label for="name" class="label-textarea"
+              >Nhập tên và nhấn ENTER để thêm tên người chơi</label
+            >
+            <textarea name="" id="name" class="textarea-content"></textarea>
+          </div>
         </div>
       </div>
     </div>
+    <div class="show-popup"></div>
     <footer></footer>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <!-- <script src="./assets/js/popup.js"></script> -->
   </body>
 </html>
