--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vòng quay may mắn</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/images/mdsco-favicon.png"
+    />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
       integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
@@ -17,7 +22,11 @@
     <header>
       <div class="header-container">
         <div class="header-logo">
-          <img src="./assets/logo-mdsco-blue.png" alt="" class="header-img" />
+          <img
+            src="./assets/images/logo-mdsco-blue.png"
+            alt=""
+            class="header-img"
+          />
         </div>
         <div class="header-content">
           <h1>VÒNG QUAY MAY MẮN</h1>
@@ -57,7 +66,7 @@
       </div>
     </div>
     <div class="show-popup"></div>
-    <footer></footer>
+
     <script src="./assets/js/script.js"></script>
     <!-- <script src="./assets/js/popup.js"></script> -->
   </body>
