--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <select name="" id="" class="select-timer">
                 <option value="0">- Chọn thời gian quay -</option>
                 <option value="5">5 giây</option>
-                <option value="10">10 giây</option>
+                <option value="10" selected>10 giây</option>
                 <option value="15">15 giây</option>
                 <option value="20">20 giây</option>
                 <option value="25">25 giây</option>
@@ -71,16 +71,7 @@
             </div>
             <div class="container-action">
               <div class="container-spin--list">
-                <div
-                  class="spin-btn btn-action"
-                  style="
-                    cursor: not-allowed;
-                    pointer-events: none;
-                    background: gray;
-                  "
-                >
-                  Bắt đầu quay
-                </div>
+                <div class="spin-btn btn-action">Bắt đầu quay</div>
               </div>
               <div class="container-sort--list">
                 <div class="sort-random--btn btn-action sort-btn">
